Mon May 12 17:29:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove unused function

Mon May 12 17:17:14 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/moreandcount.c: improved

Mon May 12 10:52:55 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: rollback...

Mon May 12 07:53:05 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: improve TDS7+ dynamic

Sun May 11 10:34:07 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	*  src/odbc/unittests/earlybind.c(added):
	- improve ODBC
	- added test for early binding

Sun May 11 09:27:24 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/odbc.c: return CLI year

Fri May  9 15:05:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/config.c src/tds/mem.c:
	- cleanup and const

Fri May  9 11:53:13 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: return SQL_ERROR on SQLRowCount
	* src/tds/config.c src/tds/mem.c: fixes on configuration

Thu May  8 10:10:22 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: sort function declarations
	* src/apps/tsql.c: use strdup to copy string
	* src/ctlib/ct.c src/dblib/rpc.c src/odbc/odbc_util.c:
	* src/odbc/sql2tds.c src/tds/Makefile.am src/tds/token.c:
	* src/tds/data.c(added):
	- add data.c and put some function here (from token.c)
	- added tds_set_param_type function

Wed May  7 23:58:33 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c default to CHARSET_ISO1

Wed May  7 23:08:12 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* acinclude.m4 Add comments for iconv testing
	* configure.in test for locale_charset
	* src/tds/util.c remove date from %L in tdsdump, added to tds_open	
	* src/ctlib/cs.c src/ctlib/ct.c src/dblib/dblib.c src/dblib/rpc.c
	* src/tds/convert.c src/tds/query.c src/tds/threadsafe.c 
	* src/tds/token.c